# lo21-carcassone

./: .gitignore  CMakeLists.txt  Element.cpp  Element.hpp  Groupement  Groupement.hpp  Projet.h  README.md  Tuile.cpp  Tuile.h  VueGroupement.cpp  VueGroupement.h  VuePartie.cpp  VuePartie.h  VuePlateau.cpp  VuePlateau.h  VuePoseMeeple.cpp  VuePoseMeeple.h  VueSettings.cpp  VueSettings.h  VueTuile.cpp  VueTuile.h  VueValider.h  jeu.cpp  joueur.cpp  joueur.h  main.cpp  pioche.cpp  position.cpp  position.h  qmake.pro  test.txt  vuepartie.cpp  vuepartie.h
interface/carcassone/: VuePartie.cpp  VuePartie.h  VuePlateau.cpp  VuePlateau.h  VueSettings.cpp  VueSettings.h  VueTuile.cpp  VueTuile.h  VueValider.cpp  carcassone.pro  main.cpp
interface/carcassone/src/: element.h  enum.cpp  jeu.h  joueur.cpp  joueur.h  meeple.cpp  meeple.h  plateau.cpp  tuile.cpp
src/: element.cpp  element.h  enum.cpp  enum.h  gameengine.cpp  gameengine.h  groupement.cpp  groupement.h  jeu.cpp  jeu.h  joueur.cpp  joueur.h  meeple.cpp  meeple.h  meeple.hpp  pioche.cpp  pioche.h  plateau.cpp  plateau.h  tuile.cpp  tuile.h
structuration-du-projet/: uml.puml  uml_simplifie.puml
utils/: cartes.xml  tuiles-auberges.xml  tuiles-main.xml  tuiles-riviere.xml
utils/libraries/: tinyxml2.cpp
